--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script src="https://kit.fontawesome.com/760fa9f064.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
